# confull

./: LICENSE  README-en.md  README.md  pyproject.toml
confull/: __init__.py  config.py  exceptions.py  formats.py  handlers.py  node.py
doc/: README-ai-zh.md
tests/: aa.py  demo.py  test_config.py  test_config_01.py  test_config_02.py  test_config_03.py  test_config_all.py  test_confull.py
tests/tests/: empty.toml  proc_default.toml  proc_safe.toml  secure_tampered.toml  test_adv.toml  transact_test.toml
