[tool.poetry]
name = "confull"
version = "0.0.6"
description = "一个简单的配置管理工具(A simple dictionary configuration management tool),dict <-> config file [json, toml, yaml, ini, xml]"
authors = ["zisul <zisull@qq.com>"]
readme = "README.md"
packages = [{ include = "confull" }]
license = "MIT"
keywords = ["configuration", "toml", "yaml", "json", "ini", "xml"]
classifiers = [  # 直接放在 [tool.poetry] 下
  "Programming Language :: Python :: 3",
  "License :: OSI Approved :: MIT License",
  "Operating System :: OS Independent",
  "Topic :: Software Development :: Libraries",
]

[tool.poetry.dependencies]
python = "^3.6"
orjson = "^3.10.11"
toml = "^0.10.2"
PyYAML = "^6.0.2"
configparser = "^7.1.0"  # 注意：configparser 是 Python 标准库的一部分，通常不需要单独安装
watchdog = "^3.0.0"
portalocker = "^3.0.0"
cryptography = "^42.0.0"

[tool.mypy]
python_version = "3.8"
check_untyped_defs = true
disallow_untyped_defs = true
ignore_missing_imports = true

[[tool.mypy.overrides]]
module = "confull.config"
ignore_errors = true

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"