[tool.poetry]
name = "confull"
version = "0.1.1"
description = "一个简单的配置管理工具(A simple dictionary configuration management tool),dict <-> config file [json, toml, yaml, ini, xml]"
authors = ["zisul <zisull@qq.com>"]
readme = "README.md"
packages = [{ include = "confull" }]
license = "MIT"
keywords = ["configuration", "toml", "yaml", "json", "ini", "xml"]
classifiers = [
  "Programming Language :: Python :: 3",
  "License :: OSI Approved :: MIT License",
  "Operating System :: OS Independent",
  "Topic :: Software Development :: Libraries",
]

[tool.poetry.dependencies]
python = "^3.8"
orjson = "^3.10.11"
toml = "^0.10.2"
PyYAML = "^6.0.2"
watchdog = "^6.0.0"
portalocker = "^3.0.0"
cryptography = "^42.0.0"

[tool.mypy]
python_version = "3.8"
check_untyped_defs = true
disallow_untyped_defs = true

[[tool.mypy.overrides]]
module = "confull.config"
ignore_errors = true

[[tool.mypy.overrides]]
module = ["orjson", "toml", "yaml", "portalocker", "watchdog", "cryptography.*"]
ignore_missing_imports = true

[build-system]
requires = ["poetry-core>=1.5.0"]
build-backend = "poetry.core.masonry.api"